--- a/package.json
+++ b/package.json
@@ -27,10 +27,12 @@
   },
   "main": "./lib/docker",
   "scripts": {
-    "test": "./node_modules/mocha/bin/mocha.js -R spec --exit"
+    "test": "./node_modules/mocha/bin/mocha.js -R spec --exit",
+    "build": "yarn install"
   },
   "license": "Apache-2.0",
   "engines": {
     "node": ">= 8.0"
-  }
+  },
+  "packageManager": "yarn@4.5.3+sha512.3003a14012e2987072d244c720506549c1aab73ee728208f1b2580a9fd67b92d61ba6b08fe93f6dce68fd771e3af1e59a0afa28dd242dd0940d73b95fedd4e90"
 }
